@@ -696,4 +696,5 @@ table.insert(tests, "netsync_permissions_wildcards")
 table.insert(tests, "log_--to")
 table.insert(tests, "mkdir")
 table.insert(tests, "fail_cleanly_when__MTN_format_corrupt")
+table.insert(tests, "add_ignores__MTN")
 
